added new check for space and periods