@@ -36,9 +36,25 @@ public class LowercaseSentenceTokenizer implements Tokenizer {
       //used this old stackoverflow post to help use regex instead of whitespace to remove the double space
       //https://stackoverflow.com/questions/3958955/how-to-remove-duplicate-white-spaces-in-string-using-java
       //https://stackoverflow.com/questions/8020848/how-is-the-and-or-operator-represented-as-in-regular-expressions
-        String regexArr= "^\\s\\.|\\s";
-        List<String> returnTokens = new ArrayList<String>(Arrays.asList(scanner.nextLine().split(regexArr)));
-    return returnTokens;
+        String regexArr= "\\s+";
+
+        List<String> words= new ArrayList<>(List.of(scanner.nextLine().split(regexArr)));
+        //used https://medium.com/@AlexanderObregon/checking-if-a-word-ends-with-a-certain-letter-in-java-a87768a13563 for endsWith()
+        for(int i=0;i< words.size();i++){
+            String word = words.get(i).toLowerCase();
+            if(word.endsWith(".")){
+                words.set(i,word.substring(0,word.length()-1));
+                words.add(i+1,".");
+                
+
+            }
+            else{
+                words.set(i,word);
+            }
+        }
+
+
+    return words;
   }
 }
 
